--- a/JavaScript/1주차/1주차.md
+++ b/JavaScript/1주차/1주차.md
@@ -1,7 +1,8 @@
+# 1주차 review
 
 ### 1. 일급 객체(first-class object)란?
 함수를 파라미터로 쓸 수도 있고 리턴값으로도 쓸 수 있는 것
-### 2. 원시 타압과 객체 타입의 차이점? (변수 할당 방식에 있어서의 차이점)
+### 2. 원시 타입과 객체 타입의 차이점? (변수 할당 방식에 있어서의 차이점)
 원시 타입은 call-by-value로 값을 할당, 객체 타입은 call-by-reference로 메모리를 참조함.
 ### 6. 변수 호이스팅 vs 함수 호이스팅
 변수 호이스팅은 선언만 먼저하고 호출할때 그 위치에서 할당, 함수 호이스팅은 함수를 어디다 선언 해도 쓸 수 있음.
