--- a/React/누구든지 하는 리액트_ 강의 요약/#0. 리액트는 무엇인가.md
+++ b/React/누구든지 하는 리액트_ 강의 요약/#0. 리액트는 무엇인가.md
@@ -8,19 +8,19 @@
 개발을 하게 될 때 생산성과 깊이 관여되어있고, 더 높은 유지 보수성과 관계가 있음.
 
 ### 대표적인 프론트엔드 라이브러리/프레임워크 3대장
-● Angular
+1. Angular
     - 라우터, HTTP 클라이언트 등 다양한 기능 내장
     - 기업에서 많이 사용, 유지보수하고 있는 프로젝트가 많아서 사용률이 높은 편
     - 주로 타입스크립트와 함께 사용
 
-● React
+2. React
     - 컴포넌트라는 개념에 집중되어있는 라이브러리
     - 데이터를 넣으면 우리가 지정한 유저 인터페이스를 조립해서 보여줌
     - Angular와 달리, 사용자에게 전달되는 뷰만 신경쓰고 나머지 기능은 써드파티 라이브러리 활용
     - 공식 라이브러리가 따로 없고, 한가지 문제에 대한 여러가지 솔루션이 있음
     - 리액트를 사용하는 유명한 기업들도 많음
 
-● Vue
+3. Vue
     - 입문자가 사용하기에 쉬움
     - Webpack 같은 모듈 번들러가 없어도 CDN을 불러와서 사용하는 형태로도 자주 사용됨
     - html을 템플릿처럼 그대로 사용할 수 있음
