--- a/React/누구든지 하는 리액트_ 강의 요약/#2. JSX.md
+++ b/React/누구든지 하는 리액트_ 강의 요약/#2. JSX.md
@@ -7,7 +7,7 @@ HTML과 비슷하지만 지켜야 할 몇 가지 규칙이 있음.
 
 ### 1.꼭 닫혀야 하는 태그
 html에서 input, br 태그를 작성할때와는 다르게, 태그는 꼭 닫혀있어야 함. 
-ex) <input/> 또는 <input></input>
+ex) `<input/>` 또는 `<input></input>`
 
 ### 2. 감싸져 있는 엘리먼트
 두 개 이상의 엘리먼트는 무조건 하나의 엘리먼트로 감싸져있어야 함.
@@ -78,7 +78,7 @@ export default App;
 ```
 
 
-### **var** vs **const** vs **let**
+### `var` vs `const` vs `let`
 ● var - ES6에서는 더 이상 쓰지 않음
 ● const - 한 번 선언 후 고정적인 값을 사용할 떄
 ● let - 한 번 선언 후 바뀌게 될 수 있는 값을 사용할 때
